DodgeDynasty/Content/Site.css
*
{
  -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
          box-sizing: content-box;
}
html
{
	background-color: #efeeef;
	margin: 0;
	padding: 0;
}

body
{
	border-top: solid 6px #000;
	color: #333;
	font-size: 0.9em;
	font-family: "Segoe UI" , Verdana, Helvetica, Sans-Serif;
	margin: 0;
	padding: 0;
}

header {
	background-color: #fff;
}

/*.content-width {
    float: left;
    min-width: 100%;
}*/

/*.draft-round-row {
  display: block;
    float:left;
    border: 1px solid yellow;
    min-width:100px; width: auto !important; width: 100px;
    overflow: auto;
    white-space: nowrap;
}*/

.small-page-header, .page-header, .large-page-header, .left-small-page-header {
	text-align: center;
	margin-top: 5px;
	margin-bottom: 12px;
	font-weight: bold;
}

.left-small-page-header {
	text-align: left;
}

.small-page-header {
	font-size: 13px;
}
.page-header {
	font-size: 16px;
}
.large-page-header {
	font-size: 24px;
}

.page-header .header-subtext, .large-page-header .header-subtext {
	font-size: 16px;
	font-weight: normal;
}

.page-entries {
	text-align: center;
}

.page-section-large {
	margin-top: 18px;
}

.page-section {
	margin-top: 12px;
}

a
{
	color: #333;
	outline: none;
	text-decoration: underline;
	padding: 0px 1px 0px 1px;
}

a:link, a:visited, a:active, a:hover
{
	color: #333;
}

a:hover
{
	background-color: #c7d1d6;
}

header, footer, hgroup, nav, section
{
	display: block;
}

mark
{
	background-color: #a6dbed;
	padding-left: 5px;
	padding-right: 5px;
}

.float-left
{
	float: left;
}

.float-right
{
	float: right;
}

.new-line
{
	display: block;
}

.clear-fix:after
{
	content: ".";
	clear: both;
	display: block;
	height: 0;
	visibility: hidden;
}

h1, h2, h3, h4, h5, h6
{
	color: #000;
	margin-bottom: 0;
	padding-bottom: 0;
}

h1
{
	font-size: 2em;
}

h2
{
	font-size: 1.75em;
}

h3
{
	font-size: 1.2em;
}

h4
{
	font-size: 1.1em;
}

h5, h6
{
	font-size: 1em;
}

h5 a:link, h5 a:visited, h5 a:active
{
	padding: 0;
	text-decoration: none;
}


/* main layout
----------------------------------------------------------*/
.content-wrapper
{
	margin: 0 auto;
}

#body
{
	background-color: #efeeef;
	clear: both;
	padding-bottom: 35px;
}

.main-content
{
	padding-top: 15px;
	padding-right: 10px;
	padding-left: 10px;
}

.featured + .main-content
{
	background: url("../Images/heroAccent.png") no-repeat;
}

header .content-wrapper
{
	padding-top: 3px;
}

footer
{
	clear: both;
	background-color: #e2e2e2;
	font-size: .8em;
	height: 100px;
	width: 100%;
}


/* site title
----------------------------------------------------------*/
.site-logo
{
	color: #B0E0E6;
	font-family: 'Brush Script MT', 'Brush Script MT Italic', Arial, sans-serif;
	font-size: 27px;	
	height: 32px;
	margin: -5px 0px 0px 0px;
	padding-left: 10px;
}

.site-logo a, .site-logo a:hover, .site-logo a:active
{
	background: none;
	color: #c8c8c8;
	outline: none;
	text-decoration: none;
}


/* login
----------------------------------------------------------*/
#login
{
	display: block;
	font-size: .85em;
	margin: 0 0 10px;
	text-align: right;
}

#login a
{
	background-color: #d3dce0;
	margin-left: 10px;
	margin-right: 3px;
	padding: 2px 3px;
	text-decoration: none;
}

#login a.username
{
	background: none;
	margin: 0;
	padding: 0;
	text-decoration: underline;
}

#login ul
{
	margin: 0;
}

#login li
{
	display: inline;
	list-style: none;
}


/* menu
----------------------------------------------------------*/
.top-nav{
	min-width: 297px;
}
ul.menu
{
	font-size: 17px;
	font-weight: 500;
	margin: 0px;
	padding-left: 5px;
	padding-bottom: 4px;
	text-align: right;
}

ul.menu li
{
	margin-top: 1px;
	display: inline;
	list-style: none;
	padding-left: 5px;
}

ul.menu li a, ul.dropdown-menu li
{
	background: none;
	color: #999;
	text-decoration: none;
	padding-bottom: 1px;
}

ul.menu li a:hover
{
	background-color: #EFEEEF;
	color: #333;
	text-decoration: none;
}

ul.menu li.desktopNav
{
	display: inline;
}

ul.menu li.mobileNav
{
	display: none;
	font-size: 16px;
	padding-right: 5px;
}
ul.menu li.mobileNav a {
	color: #333;
}

.navbar-nav {
	/* width: 100%; */
}
.navbar-toggle {
  padding: 4px 4px;
  background-color: transparent;
  background-image: none;
  border: none;
  border-radius: 2px;
  -webkit-border-radius: 2px;
  margin-right: 5px;
}
.navbar-toggle:focus {
  outline: 0;
}
.navbar-toggle:focus {
  outline: 0;
}
.navbar-toggle .icon-bar {
  display: block;
  width: 17px;
  height: 3px;
  border-radius: 1px;
  -webkit-border-radius: 1px;
  background-color: #999;
}
.navbar-toggle .icon-bar + .icon-bar {
  margin-top: 3px;
}
.navbar-toggle:hover,
.navbar-toggle:focus {
  background-color: #ddd;
}
.collapse {
  display: none;
}
.collapse.in {
  display: block;
}
tr.collapse.in {
  display: table-row;
}
tbody.collapse.in {
  display: table-row-group;
}

.navbar-collapse {
  max-height: 340px;
  padding-right: 44px;
  overflow-x: visible;
  border-top: 1px solid transparent;
  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
  -webkit-overflow-scrolling: touch;
}

.navbar-collapse:before,
.navbar-collapse:after {
  display: table;
  content: " ";
}

.navbar-collapse:after {
  clear: both;
}

.navbar-collapse:before,
.navbar-collapse:after {
  display: table;
  content: " ";
}

.navbar-collapse:after {
  clear: both;
}

.navbar-collapse.in {
  
}
.navbar-collapse,
.navbar-form {
  border-color: #e6e6e6;
}
.navbar-collapse .menu {
  padding-top: 3px;
  padding-bottom: 4px;
  float: right;
}
.collapsing {
  position: relative;
  height: 0;
  overflow: hidden;
  -webkit-transition-timing-function: ease;
       -o-transition-timing-function: ease;
          transition-timing-function: ease;
  -webkit-transition-duration: .35s;
       -o-transition-duration: .35s;
          transition-duration: .35s;
  -webkit-transition-property: height, visibility;
       -o-transition-property: height, visibility;
          transition-property: height, visibility;
}
/* ... */

